Modified index.html file for practice

--- a/HTML task/index.html
+++ b/HTML task/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first title</title>
-    <style>td {
+    <style>td, th, table {
         border: black 1px solid;
-    } 
+    }
     </style>
 </head>
 <body>
@@ -14,6 +14,7 @@
         <h1>Anna Tarasyeva</h1>
         <h2>QA Trainee</h2>
     </div>
+    <img src="/Images/237-3500x2095.jpg" alt="cute black labrador puppy" width="300" height="200" >
 <hr color="blue" size="2">
 <div>
     <h3>Summary:</h3>
@@ -21,17 +22,13 @@
 </div>
 <div>
     <h3>My education</h3>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, eligendi! </p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.<br> Quibusdam, eligendi! </p>
     <br>
-    <i>My photo</i>
-    <br>
-    <br>
-    <img src="/Images/237-3500x2095.jpg" alt="cute black labrador puppy" width="300" height="200">
 </div>
 <div>
     <h3>Tech Skills:</h3>
     <ul>
-        <li>Html</li>
+        <li>HTML</li>
         <li>CSS</li>
         <li>Jira</li>
         <li>Confluence</li>
@@ -39,14 +36,22 @@
 </div>
 <div>
     <h3>Contacts</h3>
-    <table>
+    <table style="width:400px">
 <tr>
-    <td>
-       Linkedin 
-    </td>
-    <td>
-        <a href="https://www.linkedin.com/in/анна-тарасьєва-402735306">Linkedin</a>
-    </td>
+    <th>Telegram</th>
+    <th>Linkedin</th>
+    <th>Email</th>
+</tr>
+<tr>
+     <td>
+         <a href="https://www.linkedin.com/in/анна-тарасьєва-402735306" target="_blank">My Linkedin</a>
+     </td>
+     <td>
+        <a href="https://t.me/anna_tarasyeva" target="_blank">My Telegram</a> 
+     </td>
+<td>
+    <a href="mailto:tarasieva.hanna@gmail.com">tarasieva.hanna@gmail.com</a> 
+</td>
 </tr>
     </table>
 </div>
