Moved style.css file to the html task folder and corrected path in the index.html file

--- a/HTML task/index.html
+++ b/HTML task/index.html
@@ -12,7 +12,7 @@ img {
   border-radius: 50%;
 }
 </style>
-<link rel="stylesheet" href="../style.css">
+<link rel="stylesheet" href="../HTML task/style.css">
 </head>
 <body style="background-color:#F0CFC3">
     <nav class="navbar">
