--- a/HTML task/index.html
+++ b/HTML task/index.html
@@ -5,16 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#226DAA" />
     <title>My first title</title>
-<style>td, th, table {
-    border: black 1px solid;
-    }
-img {
-  border-radius: 50%;
-}
+<style>
 </style>
 <link rel="stylesheet" href="../HTML task/style.css">
 </head>
-<body style="background-color:#F0CFC3">
+<!--<body style="background-color:#F0CFC3">--->
     <nav class="navbar">
     <a href="#education">My Education</a>
         <a href="#courses">Courses</a>
@@ -24,21 +19,23 @@ img {
         <a href="#languages">Languages</a>
         <a href="#contact">My Contacts</a>
     </nav>
+    <div><img class="dog" src="../HTML task/Images/237-3500x2095.jpg" alt="cute black labrador puppy" width="300" height="200" ></div>
     <div class="main">
         <h1>Anna Tarasyeva</h1>
         <h2>QA Trainee</h2>
     </div>
-    <img src="../HTML task/Images/237-3500x2095.jpg" alt="cute black labrador puppy" width="300" height="200" >
-<hr color="blue" size="3">
-<div>
-    <h3 id="education">My Education</h3>
-    <p><b>Horlivka Institute for Foreign Languages/ Specialist</b>
-        <br>Humanitarian Faculty/Translator (English, German)
-        <br><i>2009 - 2014</i></p>
+<hr color="black" size="3">
+<div class="border-all">
+<h3 id="education">My Education</h3>
+    <ul>
+        <li><b>Horlivka Institute for Foreign Languages/ Specialist</b>
+            <br>Humanitarian Faculty/Translator (English, German)
+            <br><i>2009 - 2014</i></li>
+    </ul>
 </div>
-<div>
+<section class="border-all">
     <h3 id="courses">Courses</h3>
-<ul>
+<ul class="courses-list">
         <li><b>QA TestLab |<i>Dec 2023 - Jan 2024</i></b><br>
             The Fundamentals of Software Testing
         </li>
@@ -48,8 +45,8 @@ img {
                 The QA Manual 
         </li>
     </ul>
-</div>
-<div>
+</section>
+<div class="border-all">
     <h3 id="experience">Work Experience</h3>
     <h4>Namecheap, Inc. / Hosting Technical Support | <i>2018 - 2020</i></h4>
 <ul>
@@ -71,7 +68,7 @@ img {
     <li>Maintain own level of technical skills and corporate knowledge through following corporate updates and self-development.</li>
     <li>Exemplify professional attitude towards the company, both in terms of job description conformity, loyalty, and respectful and assistance-focused attitude towards both external and internal clients.</li>
 </div>
-<section>
+<section class="border-all">
     <h3 id="hard">Hard Skills</h3>
     <ul>
         <li>HTML</li>
@@ -80,7 +77,7 @@ img {
         <li>Confluence</li>
     </ul>
 </section>
-<section>
+<section class="border-all">
 <h3 id="soft">Soft Skills</h3>
     <ul>
         <li>Communication</li>
@@ -92,45 +89,48 @@ img {
         <li>Patience</li>
     </ul>
 </section>
-       <section>
+       <section class="border-all">
         <h3 id="languages">Languages</h3>
         <ul>
             <li><i>Ukrainian</i> (Fluent)</li>
             <li><i>English</i> (Upper-Intermediate)</li>
           </ul> 
        </section>
-    <br>
-  
-<hr color="blue" size="3">
-<div>
-<h3>Location</h3>
-<span>Ukraine, Dnipro</span>
+<div class="border-all-1">
+    <div class="dnipro" class="border-all-2">
+        <a href="https://en.wikipedia.org/wiki/Dnipro"><img class="dnipro-2" width="250px" height="150px" src=".//Images/Dnipropetrovsk_view_2015_tov-tob.jpg"></a>
+    </div>
+<h3 class="ukraine">Location</h3>
+<p class="ukraine">Ukraine, Dnipro</p>
 </div>
-<div class="column1">
+</div>
+<section class="border-all">
     <h3 id="contact">My Contacts</h3>
-<table>
-  <tr>
-    <th>Telegram</th>
-    <td><a href="https://t.me/anna_tarasyeva" target="_blank">anna_tarasyeva</a> </td>
-  </tr>
-  <tr>
-    <th>Email</th>  
-    <td><a href="mailto:tarasieva.hanna@gmail.com">tarasieva.hanna@gmail.com</a> </td>      
-  </tr>  
-  <tr>
-    <th>Phone</th>
-    <td><a href="tel:+12136771024">+38 067 162 8410</a>
-    </td>
-  </tr>
-  <tr>
-    <th>Linkedin</th>
-    <td><a href="https://www.linkedin.com/in/анна-тарасьєва-402735306" target="_blank">Анна Тарасьєва</a></td>
-  </tr>
-</table>
+<div class="border-сontacts">
+    <table class="border-сontacts">
+    <tr>
+      <th>Telegram</th>
+      <td><a href="https://t.me/anna_tarasyeva" target="_blank">anna_tarasyeva</a> </td>
+    </tr>
+    <tr>
+      <th>Email</th>  
+      <td><a href="mailto:tarasieva.hanna@gmail.com">tarasieva.hanna@gmail.com</a> </td>      
+    </tr>  
+    <tr>
+      <th>Phone</th>
+      <td><a href="tel:+12136771024">+38 067 162 8410</a>
+      </td>
+    </tr>
+    <tr>
+      <th>Linkedin</th>
+      <td><a href="https://www.linkedin.com/in/анна-тарасьєва-402735306" target="_blank">Анна Тарасьєва</a></td>
+    </tr>
+  </table>
 </div>
+</section>
 <br>
-<div>
-<p class="contact"><i>To contact me, click</i> <a href="../HTML task/pages/contact.html">here.</a>
+<div class="border-all">
+<p class="contact"><i>To contact me, click</i> <button> <a href="../HTML task/pages/contact.html" class="contact"><i>here.</i></a> </button>
     </p>
 </div>
 </body>
