--- a/test.html
+++ b/test.html
@@ -1,28 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Simple</title>
 </head>
 <body>
-   Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi omnis tenetur veniam nesciunt aliquam necessitatibus qui suscipit repellendus dolores? Maxime quidem ipsam reiciendis facere praesentium earum eius voluptates rerum temporibus. 
-   <table>
-	<tr>
-		<th>text</th>
-	</tr>
-	<tr>
-		<td>dolor. Nulla semper tellus id nunc interdum feugiat. Sed nec</td>
-	</tr>
-	<tr>
-		<td>erat. Sed nunc est, mollis non, cursus non, egestas a,</td>
-	</tr>
-	<tr>
-		<td>penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean</td>
-	</tr>
-	<tr>
-		<td>Duis volutpat nunc sit amet metus. Aliquam erat volutpat. Nulla</td>
-	</tr>
-</table>
+  <h1>ITNATION</h1>
+  <h2>Subheader</h2>
+  <img src="https://avatars0.githubusercontent.com/u/9892522?v=4&s=400" />
+  <div>
+    <p>Text element</p>
+  </div>
+  <table>
+    <tr>
+      <th>Company</th>
+      <th>Contact</th>
+      <th>Country</th>
+    </tr>
+    <tr>
+      <td>Alfreds Futterkiste</td>
+      <td>Maria Anders</td>
+      <td>Germany</td>
+    </tr>
+    <tr>
+      <td>Centro comercial Moctezuma</td>
+      <td>Francisco Chang</td>
+      <td>Mexico</td>
+    </tr>
+  </table>
+  <a href="url">link text</a>
+  <ul>
+    <li>Coffee</li>
+    <li>Tea</li>
+    <li>Milk</li>
+  </ul>
+  <div id="googleMap" style="width:100%;height:400px;"></div>
+
+<script>
+function myMap() {
+var mapProp= {
+  center:new google.maps.LatLng(51.508742,-0.120850),
+  zoom:5,
+};
+var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+}
+</script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
 </body>
 </html>
