--- a/HTML task/index(copy).html
+++ b/HTML task/index(copy).html
@@ -6,12 +6,10 @@
     <meta name="theme-color" content="#226DAA" />
     <title>My first title</title>
 <style>
-td, th, table {
-  border: black 1px solid;
-  }
 </style>
+<link rel="stylesheet" href="../HTML task/style.css">
 </head>
-<body style="background-color:#F0CFC3"></body>
+<!--<body style="background-color:#F0CFC3">--->
     <nav class="navbar">
     <a href="#education">My Education</a>
         <a href="#courses">Courses</a>
@@ -21,7 +19,6 @@ td, th, table {
         <a href="#languages">Languages</a>
         <a href="#contact">My Contacts</a>
     </nav>
-    <br>
     <div><img class="dog" src="../HTML task/Images/237-3500x2095.jpg" alt="cute black labrador puppy" width="300" height="200" ></div>
     <div class="main">
         <h1>Anna Tarasyeva</h1>
@@ -36,8 +33,6 @@ td, th, table {
             <br><i>2009 - 2014</i></li>
     </ul>
 </div>
-<hr color="black" size="3">
-
 <section class="border-all">
     <h3 id="courses">Courses</h3>
 <ul class="courses-list">
@@ -50,8 +45,6 @@ td, th, table {
                 The QA Manual 
         </li>
     </ul>
-    <hr color="black" size="3">
-
 </section>
 <div class="border-all">
     <h3 id="experience">Work Experience</h3>
@@ -75,7 +68,6 @@ td, th, table {
     <li>Maintain own level of technical skills and corporate knowledge through following corporate updates and self-development.</li>
     <li>Exemplify professional attitude towards the company, both in terms of job description conformity, loyalty, and respectful and assistance-focused attitude towards both external and internal clients.</li>
 </div>
-<hr color="black" size="3">
 <section class="border-all">
     <h3 id="hard">Hard Skills</h3>
     <ul>
@@ -85,8 +77,6 @@ td, th, table {
         <li>Confluence</li>
     </ul>
 </section>
-<hr color="black" size="3">
-
 <section class="border-all">
 <h3 id="soft">Soft Skills</h3>
     <ul>
@@ -99,8 +89,6 @@ td, th, table {
         <li>Patience</li>
     </ul>
 </section>
-<hr color="black" size="3">
-
        <section class="border-all">
         <h3 id="languages">Languages</h3>
         <ul>
@@ -108,20 +96,16 @@ td, th, table {
             <li><i>English</i> (Upper-Intermediate)</li>
           </ul> 
        </section>
-    <hr color="black" size="3">
-
 <div class="border-all-1">
-    <h3 class="ukraine">Location</h3>
-    <p class="ukraine">Ukraine, Dnipro</p>
     <div class="dnipro" class="border-all-2">
         <a href="https://en.wikipedia.org/wiki/Dnipro"><img class="dnipro-2" width="250px" height="150px" src=".//Images/Dnipropetrovsk_view_2015_tov-tob.jpg" target=_blank alt="dnipro city"></a>
     </div>
+    <p class="ukraine">Ukraine, Dnipro</p>
+<h3 class="ukraine">Location</h3>
 </div>
 </div>
-<hr color="black" size="3">
-
 <section class="border-сontacts">
-    <h3 id="contact">My Contacts</h3>
+<h3 id="contact">My Contacts</h3>
 <div>
     <table>
     <tr>
@@ -144,7 +128,7 @@ td, th, table {
   </table>
 </div>
 </section>
-<hr color="black" size="3">
+<br>
 <div class="border-all">
 <p class="contact"><i>To contact me, click</i> <button> <a href="../HTML task/pages/contact.html" class="contact"><i>here &#9829;</i></a> </button>
     </p>
