Modified index.html file

--- a/HTML task/index.html
+++ b/HTML task/index.html
@@ -9,6 +9,9 @@
 td, th, table {
   border: black 1px solid;
   }
+.dnipro {
+  border: black 3px solid;
+}
 </style>
 </head>
 <body style="background-color:#F0CFC3"></body>
@@ -113,8 +116,8 @@ td, th, table {
 <div class="border-all-1">
     <h3 class="ukraine">Location</h3>
     <p class="ukraine">Ukraine, Dnipro</p>
-    <div class="dnipro" class="border-all-2">
-        <a href="https://en.wikipedia.org/wiki/Dnipro"><img class="dnipro-2" width="250px" height="150px" src=".//Images/Dnipropetrovsk_view_2015_tov-tob.jpg" target=_blank alt="dnipro city"></a>
+    <div class="border-all-2">
+        <a href="https://en.wikipedia.org/wiki/Dnipro"><img class="dnipro"  class="dnipro-2" width="250px" height="150px" src=".//Images/Dnipropetrovsk_view_2015_tov-tob.jpg" target=_blank alt="dnipro city"></a>
     </div>
 </div>
 </div>
