Added title to index.html file

--- a/HTML task/index(copy).html
+++ b/HTML task/index(copy).html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#226DAA" />
-    <title>My first title</title>
+    <title>About myself</title>
 <style>
 </style>
 <link rel="stylesheet" href="../HTML task/style.css">
@@ -98,7 +98,7 @@
        </section>
 <div class="border-all-1">
     <div class="dnipro" class="border-all-2">
-        <a href="https://en.wikipedia.org/wiki/Dnipro"><img class="dnipro-2" width="250px" height="150px" src=".//Images/Dnipropetrovsk_view_2015_tov-tob.jpg" target=_blank alt="dnipro city"></a>
+        <a href="https://en.wikipedia.org/wiki/Dnipro" title="Click on the image to find out more"><img class="dnipro-2" width="250px" height="150px" src=".//Images/Dnipropetrovsk_view_2015_tov-tob.jpg" target=_blank alt="dnipro city"></a>
     </div>
     <p class="ukraine">Ukraine, Dnipro</p>
 <h3 class="ukraine">Location</h3>
