--- a/HTML task/index.html
+++ b/HTML task/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#226DAA" />
-    <title>My first title</title>
+    <title>About myself</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 <style>
 td, th, table {
   border: black 1px solid;
@@ -117,7 +118,7 @@ td, th, table {
     <h3 class="ukraine">Location</h3>
     <p class="ukraine">Ukraine, Dnipro</p>
     <div class="border-all-2">
-        <a href="https://en.wikipedia.org/wiki/Dnipro"><img class="dnipro"  class="dnipro-2" width="250px" height="150px" src=".//Images/Dnipropetrovsk_view_2015_tov-tob.jpg" target=_blank alt="dnipro city"></a>
+        <a href="https://en.wikipedia.org/wiki/Dnipro" title="Click on the image to find out more"><img class="dnipro"  class="dnipro-2" width="250px" height="150px" src=".//Images/Dnipropetrovsk_view_2015_tov-tob.jpg" target=_blank alt="dnipro city"></a>
     </div>
 </div>
 </div>
