Modified index.html, style.css file

--- a/CSS Task/index(copy).html
+++ b/CSS Task/index(copy).html
@@ -24,24 +24,27 @@
         <h1>Anna Tarasyeva</h1>
         <h2>QA Trainee</h2>
     </div>
+<hr color="black" size="3">
 <div class="border-all">
-    <section>
-        <h3 id="education">My Education</h3>
-            <span>
-                <b>Horlivka Institute for Foreign Languages/ Specialist</b>
-                <br>Humanitarian Faculty/Translator (English, German)
-                <br><i>2009 - 2014</i>
-            </span>
-    </section>
+<h3 id="education">My Education</h3>
+    <ul>
+        <li><b>Horlivka Institute for Foreign Languages/ Specialist</b>
+            <br>Humanitarian Faculty/Translator (English, German)
+            <br><i>2009 - 2014</i></li>
+    </ul>
 </div>
 <section class="border-all">
-    <div><h3 id="courses">Courses</h3></div>
-    <div><p><b>QA TestLab |<i>Dec 2023 - Jan 2024</i></b><br>
-        The Fundamentals of Software Testing
-    <br>
-</p>
-<p> <b>Hillel IT School | <i>Mar 2024 - July 2024</i></b><br>
-    The QA Manual</p></div>
+    <h3 id="courses">Courses</h3>
+<ul class="courses-list">
+        <li><b>QA TestLab |<i>Dec 2023 - Jan 2024</i></b><br>
+            The Fundamentals of Software Testing
+        </li>
+        <br>
+        <li>
+            <b>Hillel IT School | <i>Mar 2024 - July 2024</i></b><br>
+                The QA Manual 
+        </li>
+    </ul>
 </section>
 <div class="border-all">
     <h3 id="experience">Work Experience</h3>
@@ -94,15 +97,16 @@
           </ul> 
        </section>
 <div class="border-all-1">
-        <div class="dnipro" class="border-all-2">
-            <a href="https://en.wikipedia.org/wiki/Dnipro" title="Click on the image to find out more"><img class="dnipro-2" width="250px" height="150px" src=".//Images/Dnipropetrovsk_view_2015_tov-tob.jpg" target=_blank alt="dnipro city"></a>
-        </div>
-        <p class="ukraine">Ukraine, Dnipro</p>
-    <h3 class="ukraine">Location</h3>    </div>
+    <div class="dnipro" class="border-all-2">
+        <a href="https://en.wikipedia.org/wiki/Dnipro" title="Click on the image to find out more"><img class="dnipro-2" width="250px" height="150px" src=".//Images/Dnipropetrovsk_view_2015_tov-tob.jpg" target=_blank alt="dnipro city"></a>
+    </div>
+    <p class="ukraine">Ukraine, Dnipro</p>
+<h3 class="ukraine">Location</h3>
 </div>
-<div class="border-сontacts">
+</div>
+<section class="border-сontacts">
 <h3 id="contact">My Contacts</h3>
-<div class="table">
+<div>
     <table>
     <tr>
       <th>Telegram</th>
@@ -123,7 +127,8 @@
     </tr>
   </table>
 </div>
-</div>
+</section>
+<br>
 <div class="border-all">
 <p class="contact"><i>To contact me, click</i> <button> <a href="../HTML task/pages/contact.html" class="contact"><i>here &#9829;</i></a> </button>
     </p>
