--- a/CSS Task/pages/contact.html
+++ b/CSS Task/pages/contact.html
@@ -12,7 +12,7 @@
 </div>
     <div class="border-all">
     <div class="container">
-    <form>
+            <form action="action_page.php">
               <div class="row">
                 <div class="col-25">
                   <label for="fname">First Name</label>
@@ -26,15 +26,14 @@
                   <label for="lname">Last Name</label>
                 </div>
                 <div class="col-75">
-    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                  <input type="text" id="lname" name="lastname" placeholder="Your last name..">
                 </div>
-            </div>
                 <div class="row">
                     <div class="col-25">
                       <label for="email">Email</label>
                     </div>
                     <div class="col-75">
-    <input type="text" id="email" name="mail" placeholder="Your email..">
+                      <input type="text" id="email" name="mail" placeholder="Your email..">
                     </div>
               </div>
               <div class="row">
@@ -57,24 +56,16 @@
                   <textarea id="subject" name="subject" placeholder="Type your message here.." style="height:200px"></textarea>
                 </div>
               </div>
-<div class="row">
-<input class="button "type="button" popovertarget="submit" value="Submit">
-</div>
-<div popover id="submit">
-                    <h2>Thank you for contacting me!</h2>
-                    <hr>
-                    <p>I will reach you shortly.</p>
-                    <p>If you wish to contact me using other ways you may find my contacts <a href="../index(copy).html#contact">here.</a></p>
- <button class="close-button" popovertarget="submit" popovertargetaction="hide">Close</button>
-              </div>
+              <div class="row">
+                <input type="submit" value="Submit">
               </div>
             </form>
           </div>
-</div>
-    <div>
     </div>
 </div>
-<p class="border-all">Back to the <a href="../index.html">main page.</a></p>
+    <div> 
+    <div>
+        <p class="border-all">Back to the <a href="../index.html">main page.</a></p>
     </div>
 </div>
 </body>
