Styled index.html, modifed style.css file

--- a/HTML task/index(copy).html
+++ b/HTML task/index(copy).html
@@ -22,7 +22,7 @@
     <div><img class="dog" src="../HTML task/Images/237-3500x2095.jpg" alt="cute black labrador puppy" width="300" height="200" ></div>
     <div class="main">
         <h1>Anna Tarasyeva</h1>
-        <h2>QA Trainee</h2>
+        <h2 class="trainee">QA Trainee</h2>
     </div>
 <div class="border-all">
     <section>
@@ -36,11 +36,11 @@
 </div>
 <section class="border-all">
     <div><h3 id="courses">Courses</h3></div>
-    <div><p><b>QA TestLab |<i>Dec 2023 - Jan 2024</i></b><br>
+    <div><p><b> <a href="https://training.qatestlab.com" target="_blank">QA TestLab </a>|<i> Dec 2023 - Jan 2024</i></b><br>
         The Fundamentals of Software Testing
     <br>
 </p>
-<p> <b>Hillel IT School | <i>Mar 2024 - July 2024</i></b><br>
+<p> <b><a href="https://ithillel.ua/" target="_blank">Hillel IT School</a> | <i>Mar 2024 - July 2024</i></b><br>
     The QA Manual</p></div>
 </section>
 <div class="border-all">
@@ -94,11 +94,12 @@
           </ul> 
        </section>
 <div class="border-all-1">
-        <div class="dnipro" class="border-all-2">
+        <div class="dnipro">
             <a href="https://en.wikipedia.org/wiki/Dnipro" title="Click on the image to find out more"><img class="dnipro-2" width="250px" height="150px" src=".//Images/Dnipropetrovsk_view_2015_tov-tob.jpg" target=_blank alt="dnipro city"></a>
         </div>
         <p class="ukraine">Ukraine, Dnipro</p>
-    <h3 class="ukraine">Location</h3>    </div>
+    <h3>Location</h3>    
+</div>
 </div>
 <div class="border-сontacts">
 <h3 id="contact">My Contacts</h3>
@@ -106,7 +107,7 @@
     <table>
     <tr>
       <th>Telegram</th>
-      <td><a href="https://t.me/anna_tarasyeva" target="_blank">anna_tarasyeva</a> </td>
+      <td><a class="contact" href="https://t.me/anna_tarasyeva" target="_blank">anna_tarasyeva</a> </td>
     </tr>
     <tr>
       <th>Email</th>  
@@ -125,8 +126,9 @@
 </div>
 </div>
 <div class="border-all">
-<p class="contact"><i>To contact me, click</i> <button> <a href="../HTML task/pages/contact.html" class="contact"><i>here &#9829;</i></a> </button>
+    <p><i>To contact me, click</i> <a href="../HTML task/pages/contact.html" class="contact-2"><i>here &#9829;</i></a>
     </p>
+</p>
 </div>
 </body>
 </html>
