--- a/test.html
+++ b/test.html
@@ -3,49 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Simple</title>
+  <link rel="stylesheet" href="./test.css">
+
 </head>
 <body>
-  <h1>ITNATION</h1>
-  <h2>Subheader</h2>
-  <img src="https://avatars0.githubusercontent.com/u/9892522?v=4&s=400" />
-  <div>
-    <p>Text element</p>
-  </div>
-  <table>
-    <tr>
-      <th>Company</th>
-      <th>Contact</th>
-      <th>Country</th>
-    </tr>
-    <tr>
-      <td>Alfreds Futterkiste</td>
-      <td>Maria Anders</td>
-      <td>Germany</td>
-    </tr>
-    <tr>
-      <td>Centro comercial Moctezuma</td>
-      <td>Francisco Chang</td>
-      <td>Mexico</td>
-    </tr>
-  </table>
-  <a href="url">link text</a>
-  <ul>
-    <li>Coffee</li>
-    <li>Tea</li>
-    <li>Milk</li>
-  </ul>
-  <div id="googleMap" style="width:100%;height:400px;"></div>
-
-<script>
-function myMap() {
-var mapProp= {
-  center:new google.maps.LatLng(51.508742,-0.120850),
-  zoom:5,
-};
-var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
-}
-</script>
-
-<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
+  <div class="border-all-1">
+    <h3>Location</h3>
+    <p class="ukraine">Ukraine, Dnipro</p>
+    <a href="https://en.wikipedia.org/wiki/Dnipro" title="Click on the image to find out more"><img class="dnipro-2" width="250px" height="150px" src="./HTML task/Images/Dnipropetrovsk_view_2015_tov-tob.jpg" target=_blank alt="dnipro city"></a>
+    </div>
 </body>
 </html>
