--- a/HTML task/pages/contact.html
+++ b/HTML task/pages/contact.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 <div class="border-all">
-        <p><i>You may fill the form below to send me a message and I will reach you back.</i></p>
+        <p><i>You may fill the form below to send me a message and I will reach you back.</i><img class="smile" src="../Images/Smiley.gif" alt="Smiley face" style="width: 30px;" height="30px"> <p></p>
+        </p>
 </div>
     <div class="border-all">
     <div class="container">
@@ -74,7 +75,7 @@
     <div>
     </div>
 </div>
-<p class="border-all">Back to the <a href="../index.html">main page.</a></p>
+<p class="border-all">Back to the <a class="main-page" href="../index(copy).html">main page.</a></p>
     </div>
 </div>
 </body>
