--- a/HTML task/pages/contact.html
+++ b/HTML task/pages/contact.html
@@ -65,7 +65,7 @@
                     <h2>Thank you for contacting me!</h2>
                     <hr>
                     <p>I will reach you shortly.</p>
-                    <p>If you wish to contact me using other ways you may find my contacts <a href="../index(copy).html#contact">here.</a></p>
+                    <p>If you wish to contact me using other ways you may find my contacts <a href="../index.html#contact">here.</a></p>
  <button class="close-button" popovertarget="submit" popovertargetaction="hide">Close</button>
               </div>
               </div>
@@ -75,7 +75,7 @@
     <div>
     </div>
 </div>
-<p class="border-all">Back to the <a class="main-page" href="../index(copy).html">main page.</a></p>
+<p class="border-all">Back to the <a class="main-page" href="../index.html">main page.</a></p>
     </div>
 </div>
 </body>
